Working on new shift proxy model

--- a/src/mdtcsv/CMakeLists.txt
+++ b/src/mdtcsv/CMakeLists.txt
@@ -9,6 +9,7 @@ set (SOURCES_FILES
           mdt/csv/FieldType.cpp
           mdt/csv/RecordFormatSetupWidgetItem.cpp
           mdt/csv/RecordFormatSetupWidget.cpp
+          mdt/csv/ParserFormatSetupProxyModel.cpp
           mdt/csv/RecordFormatter.cpp
           mdtCsvStringParser.cpp
           mdtCsvFileParser.cpp
