--- a/src/mdtcsv/CMakeLists.txt
+++ b/src/mdtcsv/CMakeLists.txt
@@ -10,6 +10,7 @@ set (SOURCES_FILES
           mdt/csv/RecordFormatSetupWidgetItem.cpp
           mdt/csv/RecordFormatSetupWidget.cpp
           mdt/csv/ParserFormatSetupProxyModel.cpp
+          mdt/csv/ParserFormatSetupDelegate.cpp
           mdt/csv/RecordFormatter.cpp
           mdtCsvStringParser.cpp
           mdtCsvFileParser.cpp
@@ -38,6 +39,7 @@ target_link_libraries(mdtcsv${MDTLIB_VERSION_SUFFIX} Qt5::Widgets)
 #target_link_libraries(mdtcsv${MDTLIB_VERSION_SUFFIX} Qt5::Sql)
 target_link_libraries(mdtcsv${MDTLIB_VERSION_SUFFIX} "mdterror${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtcsv${MDTLIB_VERSION_SUFFIX} "mdterrorgui${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtcsv${MDTLIB_VERSION_SUFFIX} "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
 
 # Translations - We generate a .pro file, that simplify the usage of lupdate
 file(WRITE "${PROJECT_SOURCE_DIR}/../../translations/mdtcsv.pro" "# Translations project file for lupdate/lrelease\n")
