Removed CSV format setup widgets (obseleted by new proxy model and delegate)

--- a/src/mdtcsv/CMakeLists.txt
+++ b/src/mdtcsv/CMakeLists.txt
@@ -7,8 +7,8 @@ project (multidiagtools)
 # List of source files
 set (SOURCES_FILES 
           mdt/csv/FieldType.cpp
-          mdt/csv/RecordFormatSetupWidgetItem.cpp
-          mdt/csv/RecordFormatSetupWidget.cpp
+#           mdt/csv/RecordFormatSetupWidgetItem.cpp
+#           mdt/csv/RecordFormatSetupWidget.cpp
           mdt/csv/ParserFormatSetupProxyModel.cpp
           mdt/csv/ParserFormatSetupDelegate.cpp
           mdt/csv/RecordFormatter.cpp
