Created new unit connection PK containers

--- a/libs/CableList/tests/CMakeLists.txt
+++ b/libs/CableList/tests/CMakeLists.txt
@@ -2,18 +2,36 @@
 
 # Project
 project(multidiagtools)
+enable_testing()
 
-# Target MdtCableListPathGraphTest
+#================= Path Graph ====================
+
+# MdtCableListPathGraphPrivateTest
+add_executable(mdtcablelistpathgraphprivatetest src/PathGraphPrivateTest.cpp)
+target_link_libraries(mdtcablelistpathgraphprivatetest "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtcablelistpathgraphprivatetest Qt5::Test)
+add_test(MdtCableListPathGraphPrivateTest ${CMAKE_CURRENT_BINARY_DIR}/mdtcablelistpathgraphprivatetest)
+
+# MdtCableListPathGraphTest
 add_executable(mdtcablelistpathgraphtest src/PathGraphTest.cpp)
 target_link_libraries(mdtcablelistpathgraphtest "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtcablelistpathgraphtest Qt5::Test)
+add_test(MdtCableListPathGraphTest ${CMAKE_CURRENT_BINARY_DIR}/mdtcablelistpathgraphtest)
+
+
+#================= Article ====================
 
 # Target MdtCableListArticleTest
 add_executable(mdtcablelistarticletest src/ArticleTest.cpp)
 target_link_libraries(mdtcablelistarticletest "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtcablelistarticletest Qt5::Test)
-
-# Add executables to tests list
-enable_testing()
-add_test(MdtCableListPathGraphTest ${CMAKE_CURRENT_BINARY_DIR}/mdtcablelistpathgraphtest)
 add_test(MdtCableListArticleTest ${CMAKE_CURRENT_BINARY_DIR}/mdtcablelistarticletest)
+
+
+#================= Unit ====================
+
+# Target MdtCableListUnitConnectionTest
+add_executable(mdtcablelistunitconnectiontest src/UnitConnectionTest.cpp)
+target_link_libraries(mdtcablelistunitconnectiontest "mdtcablelist${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtcablelistunitconnectiontest Qt5::Test)
+add_test(MdtCableListUnitConnectionTest ${CMAKE_CURRENT_BINARY_DIR}/mdtcablelistunitconnectiontest)
