Migrated Modification model to new CableList

--- a/libs/CableList/CMakeLists.txt
+++ b/libs/CableList/CMakeLists.txt
@@ -7,6 +7,7 @@ project(multidiagtools)
 # List of source files
 set(SOURCES_FILES 
     src/Mdt/CableList/DatabaseSchema.cpp
+    src/Mdt/CableList/ModificationModel.cpp
     src/Mdt/CableList/LinkTypeModel.cpp
     src/Mdt/CableList/Path/Graph.cpp
 )
