--- a/libs/CableList/CMakeLists.txt
+++ b/libs/CableList/CMakeLists.txt
@@ -7,9 +7,11 @@ project(multidiagtools)
 # List of source files
 set(SOURCES_FILES 
     src/Mdt/CableList/DatabaseSchema.cpp
+    src/Mdt/CableList/Storage.cpp
     src/Mdt/CableList/ModificationModel.cpp
     src/Mdt/CableList/LinkTypeModel.cpp
     src/Mdt/CableList/LinkDirectionModel.cpp
+    src/Mdt/CableList/LinkStorage.cpp
     src/Mdt/CableList/Path/Graph.cpp
 )
 
