--- a/libs/Numeric/CMakeLists.txt
+++ b/libs/Numeric/CMakeLists.txt
@@ -5,8 +5,10 @@
 project(multidiagtools)
 
 # List of source files
-# set(SOURCES_FILES
-# )
+set(SOURCES_FILES
+   src/Mdt/Numeric/Double.cpp
+   src/Mdt/Numeric/Resistance.cpp
+)
 
 # Headers directories
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
@@ -14,7 +16,8 @@ include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
 include_directories("${CMAKE_CURRENT_BINARY_DIR}")
 
 # Output library
-# add_library(mdtnumeric${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES})
+add_library(mdtnumeric${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES})
+target_link_libraries(mdtnumeric${MDTLIB_VERSION_SUFFIX} Qt5::Core)
 # target_link_libraries(mdtnumeric${MDTLIB_VERSION_SUFFIX} "mdterror${MDTLIB_VERSION_SUFFIX}")
 # target_link_libraries(mdtnumeric${MDTLIB_VERSION_SUFFIX} "mdterrorgui${MDTLIB_VERSION_SUFFIX}")
 
@@ -31,18 +34,18 @@ file(GLOB INSTALL_HEADERS *.h)
 install(FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtnumeric" COMPONENT dev)
 
 # Install targets
-# install(TARGETS "mdtnumeric${MDTLIB_VERSION_SUFFIX}" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
+install(TARGETS "mdtnumeric${MDTLIB_VERSION_SUFFIX}" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
 
 # Strip library and put debug symbols into separate file
-# if(UNIX)
-#   add_custom_command(TARGET "mdtnumeric${MDTLIB_VERSION_SUFFIX}"
-#                     POST_BUILD
-#                     COMMAND objcopy --only-keep-debug "libmdtnumeric${MDTLIB_VERSION_SUFFIX}.so" "libmdtnumeric${MDTLIB_VERSION_SUFFIX}.dbg"
-#                     COMMAND strip --strip-debug --strip-unneeded "libmdtnumeric${MDTLIB_VERSION_SUFFIX}.so"
-#                     COMMAND objcopy --add-gnu-debuglink="libmdtnumeric${MDTLIB_VERSION_SUFFIX}.dbg" "libmdtnumeric${MDTLIB_VERSION_SUFFIX}.so"
-#                     COMMAND chmod -x "libmdtnumeric${MDTLIB_VERSION_SUFFIX}.dbg")
-#   install(FILES "libmdtnumeric${MDTLIB_VERSION_SUFFIX}.dbg" DESTINATION "${LIB_DEST_DIR}" COMPONENT dbg)
-# endif(UNIX)
+if(UNIX)
+  add_custom_command(TARGET "mdtnumeric${MDTLIB_VERSION_SUFFIX}"
+                    POST_BUILD
+                    COMMAND objcopy --only-keep-debug "libmdtnumeric${MDTLIB_VERSION_SUFFIX}.so" "libmdtnumeric${MDTLIB_VERSION_SUFFIX}.dbg"
+                    COMMAND strip --strip-debug --strip-unneeded "libmdtnumeric${MDTLIB_VERSION_SUFFIX}.so"
+                    COMMAND objcopy --add-gnu-debuglink="libmdtnumeric${MDTLIB_VERSION_SUFFIX}.dbg" "libmdtnumeric${MDTLIB_VERSION_SUFFIX}.so"
+                    COMMAND chmod -x "libmdtnumeric${MDTLIB_VERSION_SUFFIX}.dbg")
+  install(FILES "libmdtnumeric${MDTLIB_VERSION_SUFFIX}.dbg" DESTINATION "${LIB_DEST_DIR}" COMPONENT dbg)
+endif(UNIX)
 
 # Unit tests
 add_subdirectory("tests")
