--- a/libs/CableList/CMakeLists.txt
+++ b/libs/CableList/CMakeLists.txt
@@ -17,7 +17,8 @@ set(SOURCES_FILES
 
 # Headers directories
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
-# Because some headers are generated during building (config.h, Qt's UIC), we also build path
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../Numeric/src")
+# Because some headers are generated during building (config.h, Qt's UIC), we also add build path
 include_directories("${CMAKE_CURRENT_BINARY_DIR}")
 
 # Output library
@@ -25,6 +26,7 @@ add_library(mdtcablelist${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES})
 target_link_libraries(mdtcablelist${MDTLIB_VERSION_SUFFIX} "mdterror${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtcablelist${MDTLIB_VERSION_SUFFIX} "mdterrorgui${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtcablelist${MDTLIB_VERSION_SUFFIX} "mdtdatabase${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtcablelist${MDTLIB_VERSION_SUFFIX} "mdtnumeric${MDTLIB_VERSION_SUFFIX}")
 
 # Translation files
 set(TS_FILES
