--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -21,4 +21,5 @@ add_executable(mdtitemeditoractionstest src/ActionsTest.cpp)
 # target_link_libraries(mdtitemeditoractionstest "mdtsqltest")
 add_test(MdtItemEditorActionsTest ${CMAKE_CURRENT_BINARY_DIR}/mdtitemeditoractionstest)
 target_link_libraries(mdtitemeditoractionstest "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtitemeditoractionstest "mdtapplication${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtitemeditoractionstest Qt5::Test)
