--- a/libs/SerialPort/tests/CMakeLists.txt
+++ b/libs/SerialPort/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ project(multidiagtools)
 # Target mdtSerialPortTest
 add_executable(mdtserialporttest src/mdtSerialPortTest.cpp)
 target_link_libraries(mdtserialporttest "mdtserialport${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtserialporttest "mdtapplication${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtserialporttest Qt5::Test)
 
 # Add executables to tests list
