--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -18,8 +18,14 @@ enable_testing()
 
 # Target MdtItemEditorActionsTest
 add_executable(mdtitemeditoractionstest src/ActionsTest.cpp)
-# target_link_libraries(mdtitemeditoractionstest "mdtsqltest")
-add_test(MdtItemEditorActionsTest ${CMAKE_CURRENT_BINARY_DIR}/mdtitemeditoractionstest)
 target_link_libraries(mdtitemeditoractionstest "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtitemeditoractionstest "mdtapplication${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtitemeditoractionstest Qt5::Test)
+add_test(MdtItemEditorActionsTest ${CMAKE_CURRENT_BINARY_DIR}/mdtitemeditoractionstest)
+
+# Target MdtItemEditorStandardWidgetsTest
+add_executable(mdtitemeditorstandardwidgetstest src/StandardWidgetsTest.cpp)
+target_link_libraries(mdtitemeditorstandardwidgetstest "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtitemeditorstandardwidgetstest "mdtapplication${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtitemeditorstandardwidgetstest Qt5::Test)
+add_test(MdtItemEditorStandardWidgetsTest ${CMAKE_CURRENT_BINARY_DIR}/mdtitemeditorstandardwidgetstest)
