--- a/tests/mdterror/CMakeLists.txt
+++ b/tests/mdterror/CMakeLists.txt
@@ -6,14 +6,14 @@
 project (multidiagtools)
 
 # * mdtErrorTest executable *
-add_executable(mdterrortest "mdtErrorTest.cpp")
-target_link_libraries(mdterrortest "mdttest")
-target_link_libraries(mdterrortest "mdtutils${MDTLIB_VERSION_SUFFIX}")
-target_link_libraries(mdterrortest "mdterror${MDTLIB_VERSION_SUFFIX}")
+add_executable(mdterrortestOld "mdtErrorTest.cpp")
+target_link_libraries(mdterrortestOld "mdttest")
+target_link_libraries(mdterrortestOld "mdtutils${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdterrortestOld "mdterrorOld${MDTLIB_VERSION_SUFFIX}")
 
 # * mdtErrorGuiTest executable *
-add_executable(mdterrorguitest "mdtErrorGuiTest.cpp")
-target_link_libraries(mdterrorguitest "mdttest")
-target_link_libraries(mdterrorguitest "mdtutils${MDTLIB_VERSION_SUFFIX}")
-target_link_libraries(mdterrorguitest "mdterrorgui${MDTLIB_VERSION_SUFFIX}")
+add_executable(mdterrorguitestOld "mdtErrorGuiTest.cpp")
+target_link_libraries(mdterrorguitestOld "mdttest")
+target_link_libraries(mdterrorguitestOld "mdtutils${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdterrorguitestOld "mdterrorguiOld${MDTLIB_VERSION_SUFFIX}")
 
